Make outlet fixed position to right of links. Also remove Old Style/New Style table when mobile since you can't fit the outlet and table on mobile

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,3 +1,10 @@
+// Everything larger than portrait phone
+@mixin phone-portrait-and-up {
+  @media only screen and (min-width: 425px + 1) {
+    @content;
+  }
+}
+
 .dummy-notification-container {
   position: fixed;
   top: 60px;
@@ -22,11 +29,9 @@
   font-weight: bold;
 }
 
-
 .dummy-padding {
   margin: 10px;
   padding: 10px 0 10px 20px;
-
   display: inline-flex;
   flex-direction: column;
 }
@@ -59,23 +64,39 @@
 }
 
 .dummy-style {
-  display: flex;
-  flex-direction: row;
+  @include phone-portrait-and-up {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .dummy-style-item {
   padding-right: 10px;
   padding-top: 10px;
-
 }
 
 .dummy-new-style {
-  display: inline-flex;
-  flex-direction: column;
+  @include phone-portrait-and-up {
+    display: inline-flex;
+    flex-direction: column;
+  }
 }
 
 .dummy-row {
   height: 90px;
   vertical-align: top;
   padding-bottom: 10px;
+}
+
+.outlet {
+  position: fixed;
+  bottom: 50%;
+  width: 80%;
+  margin-left: 10px;
+  left: 50%;
+  z-index: -1;
+}
+
+.demo-app {
+  width: 50%
 }
